Fix header width on small screens and media query bug

--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -62,14 +62,20 @@
 }
 .header {
   position: fixed;
-  box-sizing: border-box;
-  border-radius: 15px;;
+  /* border-radius: 15px; */
   background-color: #0d0d0d;
   z-index: 1;
   top: 10px;
   margin-bottom: 3rem;
   animation: boxS 3s ease infinite;
-  box-shadow: 5px 5px 15px 0 var(--color1);
+  /* box-shadow: 5px 5px 15px 0 var(--color1); */
+}
+@media (min-width:592px){
+  .header {
+    top: 0;
+    width: 100%;
+    border-radius: 0px;
+  }
 }
 @keyframes boxS {
   0%,
