--- a/src/Component/HeroImage.css
+++ b/src/Component/HeroImage.css
@@ -143,7 +143,3 @@ body {
     text-align: center;
   }
 }
-@media (max-width: 592px) {
-  .container-hero {
-  }
-}
